# SFGE

./: .gitignore  CMakeLists.txt  README.md
data/: config.json
data/3d/: cube.blend
data/scenes/: test.scene  test_contact.scene  test_physics.scene  test_switch.scene
include/audio/: audio.h  sound.h
include/engine/: component.h  config.h  editor.h  engine.h  game_object.h  globals.h  log.h  scene.h  transform.h  utility.h
include/graphics/: graphics.h  shape.h  sprite.h  texture.h
include/input/: input.h
include/physics/: body2d.h  collider.h  physics.h
include/python/: pycomponent.h  python_engine.h
include/utility/: file_utility.h  json_utility.h  python_utility.h  singleton.h  time_utility.h
scripts/: SFGE.py  collider_test.py  component_test.py  contact_test.py  player_character_basic.py  sprite_test.py  switch_scene.py
src/: main.cpp  test.cpp
src/audio/: audio.cpp  sound.cpp
src/engine/: component.cpp  config.cpp  editor.cpp  engine.cpp  game_object.cpp  log.cpp  scene.cpp  transform.cpp  utility.cpp
src/graphics/: graphics.cpp  shape.cpp  sprite.cpp  texture.cpp
src/input/: input.cpp
src/physics/: body2d.cpp  physics.cpp
src/python/: collider.cpp  pycomponent.cpp  python_engine.cpp
src/utility/: file_utility.cpp  json_utility.cpp  python_utility.cpp  singleton.cpp  time_utility.cpp
tests/: test_ImGui.cpp  test_audio.cpp  test_contact.cpp  test_editor.cpp  test_game_object.cpp  test_mouse.cpp  test_physics.cpp  test_pycomponent.cpp  test_quadtree.cpp  test_scene.cpp  test_sfml_audio.cpp  test_shape.cpp  test_sprite.cpp  test_switch_scene.cpp  test_texture.cpp
